--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ h1 {
   font-weight: bold;
   text-align: right;
   letter-spacing: -8px;
-  color: #f0f0f0;
+  color: #000;
   margin: -40px 0px;
 }
 
